src/objects/Case_Item_PE__e.object
<CustomObject>
    <description>Platform event definition to be used for ALL Case Item record changes that require an integration with middleware.</description>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The type of operation that resulted in the platform event being fired (Create, Update, Delete, Undelete).</description>
        <label>EventType</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>18 character, case insensitive, Salesforce record Id representing the record that was modified.</description>
        <label>RecordId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>The name of the record type of the record that was changed.</description>
        <label>RecordType</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case Item PE</label>
    <pluralLabel>Case Items PE</pluralLabel>
</CustomObject>